Completed the basic visualization of comparison tests.